# ising

./: Cargo.toml  README.md
src/: lattice.rs  lib.rs  main.rs  monte_carlo.rs  utils.rs  vis.rs
src/lattice/: cubic_lattice.rs  square_lattice.rs  triangular_lattice.rs
src/monte_carlo/: creutz.rs  finite_size_scaling.rs  mc_results.rs  single_spin_flip.rs  wolf_cluster_mc.rs
tests/: single_spin_flip_tests.rs  test_creutz_algorithm.rs  wolf_cluster_flip_test.rs
