[package]
name = "ising"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
itertools = "0.14.0"
nalgebra = "0.33.2"
num-traits = "0.2.19"
plotly = {version = "0.12.1", features = ["kaleido"] }
rand = "0.9.0"
rayon = "1.10.0"
serde = "1.0.219"
serde_test = "1.0.177"
statrs = "0.18.0"
